--- a/style.css
+++ b/style.css
@@ -16,8 +16,16 @@ body{
 	margin: 50px auto 0 auto;
 }
 
+img.headerBanner{
+	margin-bottom: 1.2rem;
+}
+
 header{
-	font-size: 1.2rem;
+	font-size: 1.1rem;
 	padding-bottom: 1rem;
-	border-bottom: 1px solid #e6e6e6;
+	color: #000000;
+}
+
+.intro{
+	color: #686868;
 }
