--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 }
 
 body {
-	font-size: 0.9rem;
 	margin: 0;
 	padding: 0;
 }
@@ -14,27 +13,37 @@ body {
 .container {
 	width: 100%;
 	max-width: 600px;
-	/* Limita la larghezza massima a 600px */
 	margin: 50px auto 0 auto;
-	/* Centra il contenitore orizzontalmente */
 	padding: 0 16px;
-	/* Aggiunge padding per evitare che il testo tocchi i bordi */
-}
-
-
-@media (min-width: 768px) {
-	.container {
-		padding: 0;
-		/* Rimuove il padding extra su schermi più grandi */
-	}
+	font-size: 1rem;
 }
 
 header {
-	font-size: 1.1rem;
+	font-size: 1.5rem;
 	padding-bottom: 1rem;
 	color: #000000;
 }
 
+@media (min-width: 768px) {
+	.container {
+		font-size: 0.9rem;
+		padding: 0;
+		/* Rimuove il padding extra su schermi più grandi */
+	}
+	header {
+		font-size: 1.2rem;
+
+	}
+}
+
 .intro {
 	color: #686868;
+}
+
+section p{
+	line-height: 1.5rem;
+}
+
+a{
+	color: rgb(105, 36, 255);
 }
